--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,13 +3,15 @@ footer{
     padding: 0rem 0;
     text-align: center;
     font-size: 0.8rem;
-    background-image: url(../../assets/footer-bg.png);
+    background: transparent;
+    color: wheat;
+    /* background-image: url(../../assets/footer-bg.png); */
     
     
 }
 
 footer a{
-    color: black;
+    color: rgb(232, 226, 226);
 }
 
 .footer__logo{
